# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_even.py  brain_games.py  game_engine.py  main.py
brain_games/scripts/games/: game_calculator.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
