[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "asciinema>=2.4.0",
    "ruff>=0.11.2",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.game_even:main"
brain-calculator = "brain_games.scripts.games.game_calculator:main"
brain-engine = "brain_games.scripts.game_engine:main"
brain-gcd = "brain_games.scripts.games.game_gcd:main"
brain-progression = "brain_games.scripts.games.game_progression:main"
brain-prime = "brain_games.scripts.games.game_prime:main"
