[project]
name = "hexlet-code"
authors = [
  {name = "Nikita"}
]
version = "0.1.0"
description = "6 small games written in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "asciinema>=2.4.0",
    "ruff>=0.11.2",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.game_even:game_even"
brain-calc = "brain_games.scripts.games.game_calculator:game_calculator"
brain-engine = "brain_games.scripts.game_engine:game_engine"
brain-gcd = "brain_games.scripts.games.game_gcd:game_gcd"
brain-progression = "brain_games.scripts.games.game_progression:game_progression"
brain-prime = "brain_games.scripts.games.game_prime:game_prime"
